@@ -1,3 +1,7 @@
+2003-01-23  Bruno Haible  <bruno@clisp.org>
+
+	* minmax.h: New file, from GNU gettext, with comments from Paul Eggert.
+
 2003-01-22  Bruno Haible  <bruno@clisp.org>
 
 	* exit.h: New file, from GNU gettext.
