@@ -1,3 +1,8 @@
+2003-01-23  Bruno Haible  <bruno@clisp.org>
+
+	* modules/minmax: New module.
+	* MODULES.html.sh (func_all_modules): Add it.
+
 2003-01-22  Bruno Haible  <bruno@clisp.org>
 
 	* modules/exit: New module.
